# peelcapture-public

./: .gitmodules  readme.md
Plugins/: peelCapPlugin.h
Plugins/AxisStudio/: CMakeLists.txt  axisstudio.py  dllmain.cpp  peelCapPlugin.h
Plugins/Captury/: CMakeLists.txt  RemoteCaptury.cpp  captury_device.py  dllmain.cpp
Plugins/Captury/include/: PublicStructs.h  RemoteCaptury.h
Plugins/Motive/: CMakeLists.txt  motivePlugin.cpp  motivePlugin.h
Plugins/Sample/: CMakeLists.txt  dllmain.cpp  my_device.py
Plugins/Vicon/: CMakeLists.txt  viconPlugin.cpp  viconPlugin.h
python/: HyperDeck.py  kipro_test.py  osc_test.py  peel_user_startup.py
python/peel/: __init__.py  enf_to_json.py  file_util.py  ftrack_publish.py  google_publish.py  harvest.py  harvest.py__  movie.py  publish.py  select_sort.py  shogun_test.py  shotgrid_publish.py  shotgun_publish.py  shotlist.py  slate.py
python/peel_devices/: __init__.py  audio.py  avatary.py  axisstudio.py  blade.py  captury.py  captury_device.py  device_util.py  disguiseshotrecorder.py  dynamixyz.py  epiciphone.py  faceform_capture.py  hue.py  hyperdeck.py  iclone.py  kipro.py  manus.py  motionbuilder.py  motionbuilder2.py  motive.py  movie_recorder.py  mugshot.py  my_device.py  obs.py  osc.py  peel_recorder.py  peelrecord.py  pi.py  qtake.py  qualisys.py  rokoko.py  shogun.py  stretchsense.py  stub.py  tcp.py  udp.py  unreal.py  vcam.py  xml_udp.py  xsens.py
python/server/: test.py
touch-osc/: PEEL AUTOMATION.tosc
